# AifilAssignment

./: .gitignore  CMakeLists.txt
Assignments/ArrayIntervals/: CMakeLists.txt  arrayIntervals.cpp  arrayIntervals.h
Assignments/GetoptLong/: CMakeLists.txt  getoptLong.cpp  getoptLong.h
Assignments/List/: CMakeLists.txt  list.cpp  list.h
Assignments/Primes/: CMakeLists.txt  primes.cpp  primes.h
Tests/: CMakeLists.txt
Tests/ArrayIntervalsTest/: ArrayIntervalsTest.cpp  CMakeLists.txt
Tests/GetoptLongTest/: CMakeLists.txt  GetoptLongTest.cpp
Tests/ListTest/: CMakeLists.txt  ListTest.cpp
Tests/PrimesTest/: CMakeLists.txt  PrimesTest.cpp
